Fix font sizes, spacing, and colors

--- a/client/src/components/FormOptions/Complete/components/TopSection/index.css
+++ b/client/src/components/FormOptions/Complete/components/TopSection/index.css
@@ -4,9 +4,19 @@
     min-height: 100%;
 }
 
+.top-section .top-section__wrapper {
+    max-width: 650px;
+    margin: auto;
+}
+
 .top-section__logo {
     padding-top: 1em;
-    padding-bottom: 1.618em;
+    padding-bottom: 3em;
+}
+
+.top-section__logo img {
+    height: 25px;
+    width: auto;
 }
 
 @media (min-width: 850px) {
