--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,6 +28,11 @@ h3 {
     font-size: 1.414em;
 }
 
+h1 {
+    font-size: 2.2em;
+    margin-bottom: 1rem;
+}
+
 img {
     display: block;
 }
@@ -40,7 +45,6 @@ img {
 }
 
 @media (min-width: 600px) {
-    h1,
     h2,
     h3 {
         font-size: 1.618em;
